tests/good/test2.src
.IPPcode18
DEFVAR GF@aaa
MOVE GF@aaa string@aaa
label if
#jump if
