tests/error/test4.src
#infinite loop
.IPPcode18
label loooop
jump  loooop
